[package]
name = "adas"
version = "0.1.0"
repository = "https://github.com/jianshu93/Nonredun"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MinHash, HNSW, Sequence search, minimizer, chaining, alignment"

[[bin]]
name = "adas-build"
path = "src/adas-build.rs"

[[bin]]
name = "adas-insert"
path = "src/adas-insert.rs"

[[bin]]
name = "adas-search"
path = "src/adas-search.rs"

[[bin]]
name = "adas-chain"
path = "src/adas-chain.rs"

[[bin]]
name = "adas-knn"
path = "src/adas-knn.rs"



[dependencies]
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16.0"
needletail = "0.5.1"
rayon = "1.0"
serde = { version = "1.0", features = ["derive"] }
num = "0.4"
#gsearch = { version = "0.1.4", default-features = false, features = ["simdeez_f"]}
gsearch = { git= "https://github.com/jean-pierreBoth/gsearch", default-features = false, features = ["simdeez_f"]}
##kmerutils = { version = "0.0.11", features = ["simdeez_f"]}
kmerutils = { git = "https://github.com/jean-pierreBoth/kmerutils" ,features = ["simdeez_f"]}
hnsw_rs =  { version = "0.3.1" }
probminhash = "0.1.11"
minimap2 = "=0.1.21+minimap2.2.28"
log = { version = "0.4" }
crossbeam-utils = { version = "0.8" }
crossbeam-channel = { version = "0.5" }
crossbeam = { version = "0.8" }
env_logger = { version = "0.11" }
annembed = { version = "0.1.4", default-features = false }
num-traits = "0.2.19"
